default setup for invocation